syntax = "proto3";

package pinguin;

option go_package = "github.com/tyemirov/pinguin/pkg/grpcapi;grpcapi";
import "google/protobuf/timestamp.proto";

// Enumeration for notification type.
enum NotificationType {
  EMAIL = 0;
  SMS = 1;
}

// Enumeration for status.
enum Status {
  QUEUED = 0;
  SENT = 1;
  FAILED = 2;
  UNKNOWN = 3;
  CANCELLED = 4;
  ERRORED = 5;
}

// Attachment metadata for email notifications.
message EmailAttachment {
  string filename = 1;
  string content_type = 2;
  bytes data = 3;
}

// Request to send a notification.
message NotificationRequest {
  NotificationType notification_type = 1;
  string recipient = 2;
  string subject = 3; // Optional for SMS.
  string message = 4;
  google.protobuf.Timestamp scheduled_time = 5;
  repeated EmailAttachment attachments = 6;
  string tenant_id = 7;
}

// Response returned after sending (or when retrieving) a notification.
message NotificationResponse {
  string notification_id = 1;
  NotificationType notification_type = 2;
  string recipient = 3;
  string subject = 4;
  string message = 5;
  Status status = 6;
  string provider_message_id = 7;
  int32 retry_count = 8;
  string created_at = 9;
  string updated_at = 10;
  google.protobuf.Timestamp scheduled_time = 11;
  repeated EmailAttachment attachments = 12;
  string tenant_id = 13;
}

// Request for retrieving the status.
message GetNotificationStatusRequest {
  string notification_id = 1;
  string tenant_id = 2;
}

// Request for listing notifications.
message ListNotificationsRequest {
  repeated Status statuses = 1;
  string tenant_id = 2;
}

// Response containing notifications for list requests.
message ListNotificationsResponse {
  repeated NotificationResponse notifications = 1;
}

// Request to reschedule a queued notification.
message RescheduleNotificationRequest {
  string notification_id = 1;
  google.protobuf.Timestamp scheduled_time = 2;
  string tenant_id = 3;
}

// Request to cancel a queued notification.
message CancelNotificationRequest {
  string notification_id = 1;
  string tenant_id = 2;
}

// NotificationService defines two RPC methods.
service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
  rpc GetNotificationStatus(GetNotificationStatusRequest) returns (NotificationResponse);
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);
  rpc RescheduleNotification(RescheduleNotificationRequest) returns (NotificationResponse);
  rpc CancelNotification(CancelNotificationRequest) returns (NotificationResponse);
}
